--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,6 +22,7 @@
 .container-center > input {
     height: 40px;
     width: 348px;
+    font-size: 24px;
 }
 
 .container-center > button {
@@ -41,7 +42,12 @@
 
 .container-video {
     height: 537px;
-    width: 952px;
+}
+
+.container-video > img {
+    height: 100%;
+    width: 100%;
+    object-fit: fill;
 }
 
 .container-titulo {
